--- a/views/film.pug
+++ b/views/film.pug
@@ -13,7 +13,7 @@ block content
       while i<=5
         button.btn.btn-sm.btn-rating(class=(i==film.rating?'btn-success':'') ,rate=i,filmid=film._id) #{i++}
   .container
-    table.table.table-striped.table-bordered.table-hover
+    table.table.table-striped.table-bordered
       tr
         td genre
         td= film.genre
