--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,3 +16,10 @@ ul.error li {
     border: 1px solid #ebccd1;
     background-color: #f2dede;
 }
+div.page-header{
+  padding: 25px 25px 15px 0px;
+}
+div.rating-box{
+  padding: 25px 25px 25px 0px;
+  background: #cccccc;
+}
