--- a/views/admin.pug
+++ b/views/admin.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-    h2.page-header #{title}
+    .page-header
+     h2 #{title}
     hr
     
     h3 Calculate correlations
