--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-    h2.page-header Profile
+    .page-header
+      h2 Profile
     hr
     .container
       table.table.table-striped.table-bordered.table-hover
