--- a/views/add_film.pug
+++ b/views/add_film.pug
@@ -1,7 +1,9 @@
 extends layout
 
 block content
-  h1 #{title}
+  .page-header
+   h1 #{title}
+  hr
   if errors
       each error, i in errors
           div.alert.alert-danger #{error.msg}
