--- a/views/film.pug
+++ b/views/film.pug
@@ -3,15 +3,23 @@ extends layout
 block content
   .row
     .container.col-md-8
-      h1= film.title + " (" + film.year + ")"
-      p= film.minutes+ " minutes"
-      p= film.description
-    .container.col-md-4.text-right
-      h3 Rating
-      h2 2.5
-      - var i=1
-      while i<=5
-        button.btn.btn-sm.btn-rating(class=(i==film.rating?'btn-success':'') ,rate=i,filmid=film._id) #{i++}
+      .page-header
+       h1= film.title + " (" + film.year + ")"
+       p= film.minutes+ " minutes"
+       p= film.description
+    .col-md-4.text-right
+      .rating-box
+        h3 Average: #{stats.avg}
+        span median: #{stats.median}
+        br
+        span std deviation: #{stats.std}
+        br
+        span number of votes: #{stats.votes}
+        br
+        br
+        - var i=1
+        while i<=5
+          button.btn.btn-md.btn-rating(class=(i==film.rating?'btn-success':'') ,rate=i,filmid=film._id) #{i++}
   .container
     table.table.table-striped.table-bordered
       tr
