--- a/views/films.pug
+++ b/views/films.pug
@@ -1,8 +1,9 @@
 extends layout
 
 block content
-  h1 #{title}
-  ul.list-group
+  .page-header
+   h1 #{title}
+  hr
+  ul.list-group.table.table-striped.table-bordered.table-hover
     each film, i in films
-      li.list-group-item
-        a(href="/films/"+film._id)= film.title+" ("+film.year+")"
+      a.list-group-item.list-group-item-action(href="/films/"+film._id)= film.title+" ("+film.year+")"
