--- a/views/register.pug
+++ b/views/register.pug
@@ -1,8 +1,10 @@
 extends layout
 
 block content
-    h2.page-header Register
-    p Please register using the form below
+    .page-header
+     h2.page-header Register
+     p Please register using the form below
+    hr
     if errors
         each error, i in errors
             div.alert.alert-danger #{error.msg}
