--- a/views/admin.pug
+++ b/views/admin.pug
@@ -8,4 +8,8 @@ block content
     h3 Calculate correlations
     button.btn.btn-default.btn-lg#btn-correlation() Calculate
     
+    hr
+    h3 Calculate recomendation
+    button.btn.btn-default.btn-lg#btn-recomendation() Calculate
+    
     
