--- a/views/films.pug
+++ b/views/films.pug
@@ -4,6 +4,6 @@ block content
   .page-header
    h1 #{title}
   hr
-  ul.list-group.table.table-striped.table-bordered.table-hover
+  ul.list-group
     each film, i in films
       a.list-group-item.list-group-item-action(href="/films/"+film._id)= film.title+" ("+film.year+")"
