--- a/views/profile.pug
+++ b/views/profile.pug
@@ -18,3 +18,6 @@ block content
         tr
           td Films rated
           td #{user.filmsRated}
+        tr
+          td Films added
+          td #{user.filmsAdded}
