--- a/views/layout.pug
+++ b/views/layout.pug
@@ -41,8 +41,6 @@ body
                   if user
                       li.nav-item(class=(title == "Admin Tools" ? "active" : ""))
                           a.nav-link( href="/users/admin" ) Admin Tools
-                      li.nav-item(class=(title == "Profile" ? "active" : ""))
-                          a.nav-link( href="/users/profile" ) Profile
                   if !user
                       li.nav-item(class=(title == "Register" ? "active" : ""))
                           a.nav-link( href="/users/register" ) Register
@@ -50,8 +48,12 @@ body
                           a.nav-link( href="/users/login" ) Login
   
                   if user
-                      li
-                          a.nav-link( href="/users/logout" ) Logout
+                    li.nav-item.dropdown
+                      a.nav-link.dropdown-toggle(data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false') Logged as: #{user.username}
+                      .dropdown-menu
+                        a.dropdown-item(href='/users/profile') Profile
+                        .dropdown-divider
+                        a.dropdown-item(href='/users/logout') Logout
 
     .container
         != messages()
