--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,7 +23,9 @@ body
         span.navbar-toggler-icon
       .container
           .navbar-header
-              a.navbar-brand(href="/") I love FILMS
+              a.navbar-brand(href="/") 
+                img(src='/favicon.png' height=32, width=32)
+                span I love FILMS
           .collapse.navbar-collapse#navbarCollapse
               ul.navbar-nav.mr-auto
                   li.nav-item(class=(title == "Home" ? "active" : ""))
