--- a/views/films.pug
+++ b/views/films.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   .page-header
    h1 #{title}
-   p Number of films in database: #{films.length}
+   p Number of films in database: #{films.count}
   hr
   a.btn.btn-info(data-toggle='collapse', href='#filterform', aria-expanded='false', aria-controls='filterform')
    | Filters
