--- a/views/register.pug
+++ b/views/register.pug
@@ -11,20 +11,28 @@ block content
     form(method='POST', action='/users/register', enctype='multipart/form-data')
         .form-group
             label Name
+             span.text-danger *
             input.form-control(name='name', type='text', placeholder='Enter name')
         .form-group
             label Email
+             span.text-danger *
             input.form-control(name='email', type='email', placeholder='Enter mail')
         .form-group
             label Username
+             span.text-danger *
             input.form-control(name='username', type='text', placeholder='Enter username')
         .form-group
             label Password
+             span.text-danger *
             input.form-control(name='password', type='password', placeholder='Enter password')
         .form-group
             label Confirm password
+             span.text-danger *
             input.form-control(name='password2', type='password', placeholder='Confirm password')
         .form-group
             label Profile image
             input.form-control(name='profileimage', type='file')
         input.btn.btn-primary(type='submit', name='submit', value='register')
+    br
+    p.text-danger *required field
+        
